TestSuite/Scheduler/Errors/minend.tjp
project test "Test" "1.0" 2007-03-28 +2m

task t "Task" {
	end 2007-03-29
	minend 2007-03-30
}

